<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="aad.finalproject.jhoregatta.ResultsMenu">
    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item android:id="@+id/action_rm_class_finishes"
        android:title="@string/action_results_menu_race_stats"
        android:orderInCategory="200"
        app:showAsAction="always"/>
    <item android:id="@+id/action_select_more_boats"
        android:title="@string/action_results_menu_add_boats"
        android:orderInCategory="300"
        app:showAsAction="ifRoom"/>
    <item android:id="@+id/action_email_results"
        android:title="@string/emailResults"
        android:orderInCategory="301"
        app:showAsAction="ifRoom"/>
    <item android:id="@+id/action_exit_results"
        android:title="@string/action_exit_result_menu"
        android:orderInCategory="101"
        app:showAsAction="never"/>
</menu>
